light(default).css
:root {
  --main-font: 'Courier New', monospace;
  --text-color: black;
  --bg-color: white;
  --hover-bg: #f2f2f2;
  --hover-text: #333;
}

/* Smooth Scrolling */
html {
  scroll-behavior: smooth;
  scroll-padding-top: 120px;
}

/* Reset & Base Styles */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  margin: 0;
  font-family: var(--main-font);
  background-color: var(--bg-color);
  color: var(--text-color);
  transition: background-color 0.3s, color 0.3s;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}
main {
  max-width: 960px;
  margin: 0 auto;
  padding: 20px;
  flex: 1;
  text-align: justify;
}
footer {
  text-align: center;
  padding: 20px 0;
}

/* Header */
header {
  position: sticky;
  top: 0;
  z-index: 1000;
  height: 50px;
  width: 100%;
  background-color: var(--bg-color);
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: bold;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}
header nav {
  height: 100%;
  display: flex;
  align-items: center;
}

/* Navigation */
nav ul {
  list-style: none;
  display: flex;
  gap: 1rem;
  justify-content: center;
  align-items: center;
  font-size: 1.1rem;
}
nav ul li a {
  text-decoration: none;
  padding: 10px 16px;
  border-radius: 8px;
  font-weight: bold;
  color: var(--text-color);
}
nav ul li a:hover {
  background-color: var(--hover-bg);
  color: var(--hover-text);
}

/* Sections */
section {
  padding: 20px;
  text-align: justify;
  scroll-margin-top: 60px;
}
section h2,
section h3,
section p,
section ul,
section ul li,
section a {
  margin-bottom: 5px;
  line-height: 1.6;
}
section ul {
  padding-left: 20px;
}

/* Links */
a {
  color: var(--text-color);
}

/* Theme Toggle */
.label-text {
  font-family: sans-serif;
  color: var(--text-color);
  
}
.theme-switch {
  display: flex;
  align-items: center;
  gap: 8px;
  padding: 4px 8px;
  margin-top: 20px;
  
}
.switch {
  position: relative;
  display: inline-block;
  width: 50px;
  height: 24px;
}
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}
.slider {
  position: absolute;
  cursor: pointer;
  top: 0; left: 0; right: 0; bottom: 0;
  background-color: gray;
  border-radius: 24px;
  transition: background-color 0.3s;
}
.slider:before {
  content: "";
  position: absolute;
  height: 18px;
  width: 18px;
  left: 3px;
  bottom: 3px;
  background-color: white;
  border-radius: 50%;
  transition: transform 0.3s;
}
input:checked + .slider {
  background-color: gray;
}
input:checked + .slider:before {
  transform: translateX(26px);
}

